Add a periodic event trigger. Closes #1533

--- a/girder/conf/girder.dist.cfg
+++ b/girder/conf/girder.dist.cfg
@@ -19,6 +19,7 @@ replica_set = None
 # Set to "production" or "development"
 mode = "development"
 api_root = "api/v1"
+heartbeat = 0
 
 # [logging]
 # log_root="/path/to/log/root"
